added team members

--- a/Web-scraping/website/index.html
+++ b/Web-scraping/website/index.html
@@ -133,8 +133,8 @@
 
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/user_1.png" alt="">
-            <h5>Emily</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/Emily.png" alt="">
+            <h5>Emily Crowe</h5>
           </div>
         </div>
 
@@ -155,7 +155,7 @@
         <br>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/user_1.png" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/Justin.png" alt="">
             <h5>Justin Kerr</h5>
             <p class="font-weight-light mb-0"></p>
           </div>
@@ -178,8 +178,8 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/user_1.png" alt="">
-            <h5>Kuunal</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/Kuunal.png" alt="">
+            <h5>Kuunal Mahtani</h5>
             <p class="font-weight-light mb-0"></p>
           </div>
         </div>
